debating llava models

--- a/experiments/exp3_debating_llava.ipynb
+++ b/experiments/exp3_debating_llava.ipynb
@@ -24,23 +24,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/homes/55/kumud/anaconda/envs/experiments/lib/python3.12/site-packages/transformers/models/llava/configuration_llava.py:100: FutureWarning: The `vocab_size` argument is deprecated and will be removed in v4.42, since it can be inferred from the `text_config`. Passing this argument has no effect\n",
-      "  warnings.warn(\n",
-      "`low_cpu_mem_usage` was None, now set to True since model is quantized.\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e6bedf5419194908b809330666e1a508",
+       "model_id": "c212ec4fc56f449f8c4dc5439669e6e0",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/3 [00:00<?, ?it/s]"
+       "config.json:   0%|          | 0.00/1.10k [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -50,7 +41,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n",
       "/homes/55/kumud/anaconda/envs/experiments/lib/python3.12/site-packages/transformers/models/llava/configuration_llava.py:100: FutureWarning: The `vocab_size` argument is deprecated and will be removed in v4.42, since it can be inferred from the `text_config`. Passing this argument has no effect\n",
       "  warnings.warn(\n",
       "`low_cpu_mem_usage` was None, now set to True since model is quantized.\n"
@@ -59,12 +49,252 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3335372e49584697a639bcebfdf9a7e8",
+       "model_id": "87d1450a5f944288a5cdff651a88f76f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/3 [00:00<?, ?it/s]"
+       "model.safetensors.index.json:   0%|          | 0.00/77.2k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "02d1f93216b140d78caddc3f1d39e760",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading shards:   0%|          | 0/6 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2ee99d6972ac4a78bc07c59c70de0f3a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model-00001-of-00006.safetensors:   0%|          | 0.00/4.96G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0acf2f839b7e4608b43acf02af716524",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model-00002-of-00006.safetensors:   0%|          | 0.00/4.97G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "15e8d1b2922a47148a56febda8ca7857",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model-00003-of-00006.safetensors:   0%|          | 0.00/4.88G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "aa30930f9d704ca793a3217a4b724311",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model-00004-of-00006.safetensors:   0%|          | 0.00/4.93G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fd67675f637a421faab09ccef7a63a49",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model-00005-of-00006.safetensors:   0%|          | 0.00/4.93G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1e8ec59bf4a14e3588cdc683d288b995",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model-00006-of-00006.safetensors:   0%|          | 0.00/2.02G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7b070d46900d404c8efe845434ba9163",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/6 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ea41f20ad43642fc88c001d8becfcf32",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "generation_config.json:   0%|          | 0.00/141 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dc441d59f34d4de5b5468caf553d6380",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer_config.json:   0%|          | 0.00/1.33k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "48713cb4c51e476595bb0532ab2ec602",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer.model:   0%|          | 0.00/500k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9153fc08ad0f4da58c7f79ec3439471f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer.json:   0%|          | 0.00/1.84M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fb0edbfb4bf54bd4ae10b7b3de188b62",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "added_tokens.json:   0%|          | 0.00/41.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0ec0ce2d3cff4eddb73d57c8a68961ec",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "special_tokens_map.json:   0%|          | 0.00/438 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5fba8d7f83844a7d8e234ce1376a416e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "preprocessor_config.json:   0%|          | 0.00/557 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/homes/55/kumud/anaconda/envs/experiments/lib/python3.12/site-packages/transformers/models/llava/configuration_llava.py:100: FutureWarning: The `vocab_size` argument is deprecated and will be removed in v4.42, since it can be inferred from the `text_config`. Passing this argument has no effect\n",
+      "  warnings.warn(\n",
+      "`low_cpu_mem_usage` was None, now set to True since model is quantized.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "beba1b191b8948e782d68cb9eb9b8f61",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/6 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -79,7 +309,7 @@
     }
    ],
    "source": [
-    "MODEL_NAME = \"llava-hf/llava-1.5-7b-hf\"\n",
+    "MODEL_NAME = \"llava-hf/llava-1.5-13b-hf\"\n",
     "\n",
     "pipe1 = pipeline(\"image-to-text\", model=MODEL_NAME, model_kwargs={\"quantization_config\": quantization_config})\n",
     "pipe2 = pipeline(\"image-to-text\", model=MODEL_NAME, model_kwargs={\"quantization_config\": quantization_config})"
@@ -137,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +404,7 @@
       "Provide a detailed analysis explaining your reasoning behind your decision. \n",
       "Consider all relevant aspects, such as the watermarks, location markers, objects, actions, or scenes depicted in the image, and how well they align with the caption.\n",
       "\n",
-      "ASSISTANT: The caption is accurate and aligns well with the image. The train is black and appears to be a freight train, with its brake lights on. The train is sitting on the train tracks, and it is not carrying passengers. The scene seems to have been taken at a train station or a depot, and the train's presence indicates that it is not in service. The presence of the train tracks and the train on the tracks align with the image content and the caption's description.\n",
+      "ASSISTANT: The caption \"Services to the Scottish Borders stopped when the Waverley line closed\" doesn't accurately describe the image. In the image, we can see a large train with a single engine car traveling on train tracks, but there is no clear indication of the train stopping at the Scottish Borders or the Waverley line. Furthermore, the train engine is seen traveling on the tracks and is not stopped at any particular location.\n",
       " ======================================================================================= \n",
       "running llm-2...\n",
       "================================== RESULT FROM LLM-2 ================================== \n",
@@ -185,7 +415,11 @@
       "Provide a detailed analysis explaining your reasoning behind your decision. \n",
       "Consider all relevant aspects, such as the watermarks, location markers, objects, actions, or scenes depicted in the image, and how well they align with the caption.\n",
       "\n",
-      "ASSISTANT: The given caption does not accurately describe the image. The image shows a train with an engine attached to it, which is traveling down a track. There is no indication of a train line closure or the situation with the Scottish Borders. The image primarily focuses on the train and the track, without any additional context or reference to the caption's description.\n",
+      "ASSISTANT: The caption states that the Waverley line, which was a historic rail line in the Scottish Borders, has been closed. This line serviced the Scottish Borders and was the longest heritage railway in the British Isles.\n",
+      "\n",
+      "The image features a train on a gravel road, with three large pipes attached to the bottom of the train. It is unclear if these pipes are related to the Waverley line or if they serve another purpose. However, the context of the caption suggests that the train is not actively servicing the Scottish Borders any longer.\n",
+      "\n",
+      "Therefore, it can be concluded that the caption does not accurately describe the image, as the train is not explicitly related to the Waverley line or its closure.\n",
       " ======================================================================================= \n",
       "COMMENCING DEBATE NOW...\n",
       "================================== RESULT FROM LLM-1 ================================== \n",
@@ -193,28 +427,32 @@
       "    Caption: \"Services to the Scottish Borders stopped when the Waverley line closed\"\n",
       "\n",
       "    This is the answer another AI agent generated for the same image and caption pair:\n",
-      "    \" The given caption does not accurately describe the image. The image shows a train with an engine attached to it, which is traveling down a track. There is no indication of a train line closure or the situation with the Scottish Borders. The image primarily focuses on the train and the track, without any additional context or reference to the caption's description.\"\n",
+      "    \" The caption states that the Waverley line, which was a historic rail line in the Scottish Borders, has been closed. This line serviced the Scottish Borders and was the longest heritage railway in the British Isles.\n",
+      "\n",
+      "The image features a train on a gravel road, with three large pipes attached to the bottom of the train. It is unclear if these pipes are related to the Waverley line or if they serve another purpose. However, the context of the caption suggests that the train is not actively servicing the Scottish Borders any longer.\n",
+      "\n",
+      "Therefore, it can be concluded that the caption does not accurately describe the image, as the train is not explicitly related to the Waverley line or its closure.\"\n",
       "\n",
       "    Your task is to critically evaluate the other agent's response and provide a refined answer based on this new information. \n",
       "    If you agree with the other agent's assessment, explain why their reasoning is valid. \n",
       "    If you disagree, respectfully point out any potential flaws or counterarguments you have. \n",
       "    Aim to reach a more accurate and well-reasoned conclusion by incorporating insights from both perspectives.\n",
       "\n",
-      "    ASSISTANT: The image features a train with an engine attached to it, as it travels down a track. There is no indication of a train line closure or the situation with the Scottish Borders in the image. The primary focus of the image is the train and the track, with no additional context or reference to the caption's description. Therefore, the other agent's response seems to be based on incorrect assumptions or misinterpretation of the image. A more accurate assessment would be to acknowledge that the image does not provide enough information to support the caption's description.\n",
+      "    ASSISTANT: The other AI agent's response is valid, as the caption does indeed state that the Waverley line has been closed, and the image does not show any explicit connection between the train and the line. The train is seen on a gravel road with three large pipes attached to the bottom, which could signify a different purpose or context. The caption's content does not accurately describe the image, as the train's connection to the Waverley line or its closure is not directly evident from the scene depicted.\n",
       " ======================================================================================= \n",
       "================================== RESULT FROM LLM-2 ================================== \n",
       "USER:  \n",
       "    Caption: \"Services to the Scottish Borders stopped when the Waverley line closed\"\n",
       "\n",
       "    This is the answer another AI agent generated for the same image and caption pair:\n",
-      "    \" The caption is accurate and aligns well with the image. The train is black and appears to be a freight train, with its brake lights on. The train is sitting on the train tracks, and it is not carrying passengers. The scene seems to have been taken at a train station or a depot, and the train's presence indicates that it is not in service. The presence of the train tracks and the train on the tracks align with the image content and the caption's description.\"\n",
+      "    \" The caption \"Services to the Scottish Borders stopped when the Waverley line closed\" doesn't accurately describe the image. In the image, we can see a large train with a single engine car traveling on train tracks, but there is no clear indication of the train stopping at the Scottish Borders or the Waverley line. Furthermore, the train engine is seen traveling on the tracks and is not stopped at any particular location.\"\n",
       "\n",
       "    Your task is to critically evaluate the other agent's response and provide a refined answer based on this new information. \n",
       "    If you agree with the other agent's assessment, explain why their reasoning is valid. \n",
       "    If you disagree, respectfully point out any potential flaws or counterarguments you have. \n",
       "    Aim to reach a more accurate and well-reasoned conclusion by incorporating insights from both perspectives.\n",
       "\n",
-      "    ASSISTANT: The other agent's response is accurate and aligns well with the image content. The train is indeed a freight train with its brake lights on, and it is sitting on the train tracks. The train is not in service and is not carrying passengers. The scene appears to have been taken at a train station or a depot, as indicated by the presence of the train tracks and the train on the tracks. Overall, the response accurately reflects the contents of the image and the caption's description.\n",
+      "    ASSISTANT: I agree with the other AI agent's assessment. The image does not provide any clear indication of the train stopping at the Scottish Borders or the Waverley line. Instead, the train engine is seen traveling on the tracks, with no sign of stopping at a specific location. The caption \"Services to the Scottish Borders stopped when the Waverley line closed\" does not accurately describe the image.\n",
       " ======================================================================================= \n"
      ]
     }
@@ -252,7 +490,7 @@
     "\n",
     "    This is the answer another AI agent generated for the same image and caption pair:\n",
     "    \"{}\"\n",
-    "\n",
+    "        \n",
     "    Your task is to critically evaluate the other agent's response and provide a refined answer based on this new information. \n",
     "    If you agree with the other agent's assessment, explain why their reasoning is valid. \n",
     "    If you disagree, respectfully point out any potential flaws or counterarguments you have. \n",
