add web page title and text retrieval from url

--- a/experiments/exp5_external_retrieval.ipynb
+++ b/experiments/exp5_external_retrieval.ipynb
@@ -2,18 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "from google.cloud import vision\n",
     "import json\n",
-    "from PIL import Image"
+    "from PIL import Image\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "from transformers import pipeline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -100,6 +104,7 @@
    ],
    "source": [
     "\n",
+    "matching_urls = []\n",
     "client = vision.ImageAnnotatorClient()\n",
     "with open(image_path, \"rb\") as image_file:\n",
     "    content = image_file.read()\n",
@@ -119,6 +124,7 @@
     "\n",
     "    for page in annotations.pages_with_matching_images:\n",
     "        print(f\"\\n\\tPage url   : {page.url}\")\n",
+    "        matching_urls.append(page.url)\n",
     "\n",
     "        if page.full_matching_images:\n",
     "            print(\n",
@@ -144,6 +150,122 @@
     "        \"https://cloud.google.com/apis/design/errors\".format(response.error.message)\n",
     "    )\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['https://www.bbc.com/news/uk-scotland-26765231',\n",
+       " 'http://stadiumdb.com/news/2014/07/glasgow_commonwealth_games_kick_off',\n",
+       " 'http://stadiony.net/aktualnosci/2014/07/glasgow_startuja_igrzyska_wspolnoty_2014']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matching_urls"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## get text from webpages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "request = requests.get(matching_urls[0])\n",
+    "soup = BeautifulSoup(request.text, \"html.parser\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Glasgow 2014: What will the legacy of the Commonwealth Games legacy be? - BBC News'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.title.string"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## summarize retrieved text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summarizer = pipeline(\"summarization\", model=\"facebook/bart-large-cnn\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = soup.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Your max_length is set to 256, but your input_length is only 3. Since this is a summarization task, where outputs shorter than the input are typically wanted, you might consider decreasing max_length manually, e.g. summarizer('...', max_length=1)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "G. G. G is an award-winning children's book series based in New York City. The book is about the lives of a young boy who is adopted by a Chinese family. The first book is called \"The First Child\" and is published by Simon & Schuster.\n"
+     ]
+    }
+   ],
+   "source": [
+    "summary = summarizer(text, max_length=256, min_length=50)\n",
+    "print(summary[0]['summary_text'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
