test for different google cloud account set up

--- a/experiments/exp5_external_retrieval.ipynb
+++ b/experiments/exp5_external_retrieval.ipynb
@@ -86,19 +86,11 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "3 Pages with matching images found:\n",
+      "1 Pages with matching images found:\n",
       "\n",
       "\tPage url   : https://www.bbc.com/news/uk-scotland-26765231\n",
       "\t1 Full Matches found: \n",
-      "\t\tImage url  : http://news.bbcimg.co.uk/media/images/73842000/jpg/_73842890_tv021598785(1).jpg\n",
-      "\n",
-      "\tPage url   : http://stadiumdb.com/news/2014/07/glasgow_commonwealth_games_kick_off\n",
-      "\t1 Partial Matches found: \n",
-      "\t\tImage url  : http://stadiumdb.com/img/news/2014/07/23celtic.jpg\n",
-      "\n",
-      "\tPage url   : http://stadiony.net/aktualnosci/2014/07/glasgow_startuja_igrzyska_wspolnoty_2014\n",
-      "\t1 Partial Matches found: \n",
-      "\t\tImage url  : http://stadiony.net/img/news/2014/07/23celtic.jpg\n"
+      "\t\tImage url  : http://news.bbcimg.co.uk/media/images/73842000/jpg/_73842890_tv021598785(1).jpg\n"
      ]
     }
    ],
